--- a/cl-web-firstweb/index.html
+++ b/cl-web-firstweb/index.html
@@ -11,11 +11,11 @@
         <h1>Hi, my name is Renjini Raju</h1>
         <h2>Fun facts about me:</h2>
         <ul>
-            <li>21 years old</li>
+            <li>23 years old</li>
             <li>Live in Kerala</li>
             <li>Likes coding</li>
         </ul>
-        <p>Please connect with me on <a href="https://www.linkedin.com/in/renjini-raju-ab764b242" taget="_blank">LinkedIn here</a></p>
+        <p>Please connect with me on <a href="https://github.com/ksrenjith047a" taget="_blank">github here</a></p>
         <input type="text" placeholder="Enter email...">
         <button>Join newsletter</button>
     </body>
