--- a/cl-web-firstweb/index.html
+++ b/cl-web-firstweb/index.html
@@ -8,7 +8,7 @@
     <body>
         
         <img src=" pic.jpg">
-        <h1>Hi, my name is Renjini Raju</h1>
+        <h1>Hi, my name is K S RENJITH</h1>
         <h2>Fun facts about me:</h2>
         <ul>
             <li>23 years old</li>
