--- a/#cl-web-biscard/index.html
+++ b/#cl-web-biscard/index.html
@@ -10,7 +10,7 @@
     <div class="card">
         <img 
         class="miPic" 
-        src="./per.jpg" 
+        src="./IMG_20221226_202528" 
         alt="Christo John">
         <div class="card-text">
             <h3 class="center">Christo John</h3>
