--- a/cl-web-biscard/index.html
+++ b/cl-web-biscard/index.html
@@ -11,7 +11,7 @@
         <img 
         class="miPic" 
         src="./per.jpg" 
-        alt="Christo John">
+        alt="K S RENJITH">
         <div class="card-text">
             <h3 class="center">K S RENJITH </h3>
             <p class="center">Frontend Developer</p>
