--- a/cl-web-bdaygift/index.html
+++ b/cl-web-bdaygift/index.html
@@ -7,8 +7,8 @@
     </head>
     <body>
         <div id="header">
-            <h1>Today is RJD's birthday 🎉</h1>
-            <img id="bff-img" src="images/pic.jpeg">
+            <h1>Today is Renjith's birthday 🎉</h1>
+            <img id="bff-img" src="images/pic.jpg">
             <h2 id="bday-age">23 years old</h2>
             <h4 id="bday-date">11.12.2022</h4>
         </div>
